Fixed contrast issue with lander. Altered photos to be all of the same size. Fixed bug associated with scrolling, as well as a bug associated with the page up and down buttons causing one to need to hit them twice on certain sections.

--- a/public_html/assets/less/main.less
+++ b/public_html/assets/less/main.less
@@ -65,7 +65,7 @@ p{
   top: 0;
   height: @NAVHEIGHT;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 600;
   padding-top: 8px;
 
   @media (min-width: 1024px) {
@@ -152,7 +152,7 @@ p{
 #mission-statement{
   padding: 8%;
   padding-top: 2% !important;
-  margin-bottom: 20%;
+  margin-bottom: 10%;
 }
 
 #missionTitle{
@@ -179,8 +179,8 @@ p{
 
 #our-story{
   padding: 5%;
-  padding-top: 20% !important;
-  padding-bottom: 20% !important;
+  padding-top: 17% !important;
+  padding-bottom: 18% !important;
   background-color: lighten(@WESTERN_GRAY, 40%);
 }
 
